# ChangeLog for gnome-extra/gcalctool
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gcalctool/ChangeLog,v 1.218 2011/09/11 09:12:14 pacho Exp $

  11 Sep 2011; Pacho Ramos <pacho@gentoo.org> gcalctool-5.32.2.ebuild,
  +files/gcalctool-5.32.2-missing-header.patch:
  Fix compilation problems due missing header, bug #356563 by pp--, Bradley
  Broom and Balint SZENTE.

*gcalctool-6.0.2 (19 Aug 2011)

  19 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org> +gcalctool-6.0.2.ebuild:
  Bump to 6.0.2, from gnome overlay for GNOME 3

  23 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  -gcalctool-5.28.2.ebuild, -gcalctool-5.30.2.ebuild,
  gcalctool-5.32.2.ebuild:
  Fix slot-deps on gnome libs, remove old

  22 Mar 2011; Brent Baude <ranger@gentoo.org> gcalctool-5.32.2.ebuild:
  Marking gcalctool-5.32.2 ppc stable for bug 353436

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> gcalctool-5.32.2.ebuild:
  ppc64 stable wrt #353436

  12 Mar 2011; Raúl Porcel <armin76@gentoo.org> gcalctool-5.32.2.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #353436

  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> gcalctool-5.32.2.ebuild:
  x86 stable per bug 353436

  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> gcalctool-5.32.2.ebuild:
  Stable on amd64 wrt bug #353436

  27 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gcalctool-5.28.2.ebuild:
  ppc/ppc64 stable wrt #348987

  27 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
  gcalctool-5.30.2.ebuild:
  Drop stable keyword, see bug 348987

  18 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
  gcalctool-5.30.2.ebuild:
  x86 stable, bug 348987

*gcalctool-5.32.2 (28 Nov 2010)

  28 Nov 2010; Pacho Ramos <pacho@gentoo.org> -gcalctool-5.32.0.ebuild,
  +gcalctool-5.32.2.ebuild:
  Version bump with bugfixes and translation updates. Remove old.

  21 Oct 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -gcalctool-5.26.3.ebuild, gcalctool-5.32.0.ebuild: