@@ -1,17 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX gcalctool-5.32.2-missing-header.patch 262 RMD160 5bae9a4cae9788676ce8bad0d62531cbb2864a77 SHA1 b31d228be15e8ee18dc79075e4133298f8ef0cf8 SHA256 ff47c2953d8dfc4dfe5b3b229c354a7df11f9930be012e2de0724c6025498175
 DIST gcalctool-5.32.2.tar.bz2 1178049 RMD160 df98f5ff659f8abc877a20e146ea791b7411a8a2 SHA1 a894d910a45a20d4eab1cbd5d4277939145ec64c SHA256 b281cc545f27b37a0fd120366b1be517574d9f505b59dfc34f9860007df0b788
-DIST gcalctool-6.0.2.tar.bz2 1275979 RMD160 c67336636993dba61deddf231c17a932cb55625d SHA1 78285eeed61d9501e7534161b14eec67a385890b SHA256 63190fde1be5202ab43774785b5521d8f11592c6a9e125673028c5ac235c9316
+DIST gcalctool-6.2.0.tar.xz 999804 RMD160 9341e924cca8757caf4f6f5c0190ad0b3e8c7b50 SHA1 dc69bc1b65b29ce4e40263cfdac1c02602fc4bf3 SHA256 ddc2efe25220e9341832304dfd9e5e2390a70bb6bd70d1afeb49da88023cdffb
 EBUILD gcalctool-5.32.2.ebuild 1074 RMD160 341e1a25c77f57d44ea3e53de1927158a2377366 SHA1 7da9a09f758c2a46588b7ce63273cb1c6bafa201 SHA256 628b03443b2dc0b1a4c2b220349826a96fce95fc7328e4681369c5c21f174d4a
-EBUILD gcalctool-6.0.2.ebuild 1047 RMD160 98b931d83291356c3f49651abe7414271560fcc3 SHA1 58f9b4361c908a6f75911566276e0b56d3fa1841 SHA256 222171636e02676f3026364cd83cfe0f533764dce82f564c2b47981c6d8c4cd1
-MISC ChangeLog 27491 RMD160 04c2e8bb5d28f11b30f10106fd0f0ba6f39d092a SHA1 ffac30190553bf0d45d2bdbb4cf820f63f641311 SHA256 e59d47f60f92dd4961f6fd9d3c3dbf4affce5b22588ac3de06508eda4b6b2d1a
+EBUILD gcalctool-6.2.0.ebuild 979 RMD160 644e115e85a1414e1ef6700b203d6aa98c3be54e SHA1 75d5ada26db4500c1866bbdcda1bab99ae44111c SHA256 412d9d6d380214b35bf4858afbe8851eb456f4543b9a3ad8455099ffb0fbc078
+MISC ChangeLog 27868 RMD160 62ecb49981d7a6d3d41f3aba1981f1a81612c47d SHA1 c79a2934833e73e9a232579092681353a096a4d0 SHA256 419a8a9e768bd99a6bc5d4b307a296f4cdbba3c07218bde727bf6166afde8882
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk5se3QACgkQCaWpQKGI+9T5igCfWYtrGFJNw9z5pgI9Lfj5Dwgr
-eHEAn17Obs8FhpRsTVHaJgqg2EfzyUgO
-=Bz1B
+iF4EAREIAAYFAk62CL4ACgkQdjK8w9WeBnCFkwD/b9kPJ4p9sDulpnUGbtDr/nln
+xF4B4JR6ZCisybEhYq8BAKvTmxWppWegMm0zPaYp8DGfwP533Zhe4qhzA0BBUecD
+=gOxS
 -----END PGP SIGNATURE-----
